# elf-loader

./: CMakeLists.txt  main.cpp
elf/: loader.cpp  loader.h
